[gd_scene load_steps=7 format=3 uid="uid://dhh1vcvhk2mj1"]

[ext_resource type="Script" path="res://player/states/basic_attack_state.gd" id="1_gevl4"]
[ext_resource type="Texture2D" uid="uid://d24kl3vtfirna" path="res://colored-transparent_packed.png" id="2_ett7r"]

[sub_resource type="Animation" id="Animation_pwsx7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackStateMachine/BasicAttackState/PlayerCenterPosition/Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackStateMachine/BasicAttackState/PlayerCenterPosition/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(25, 0)]
}

[sub_resource type="Animation" id="Animation_4jll0"]
resource_name = "basic_melee_attack"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackStateMachine/BasicAttackState/PlayerCenterPosition/Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackStateMachine/BasicAttackState/PlayerCenterPosition/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(3, 0), Vector2(35, 0), Vector2(35, 0)]
}

[sub_resource type="Animation" id="Animation_2ijou"]
resource_name = "idle"
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackStateMachine/BasicAttackState/PlayerCenterPosition/Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackStateMachine/BasicAttackState/PlayerCenterPosition/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ry1cb"]
_data = {
"RESET": SubResource("Animation_pwsx7"),
"basic_melee_attack": SubResource("Animation_4jll0"),
"idle": SubResource("Animation_2ijou")
}

[node name="BasicAttackState" type="Node"]
script = ExtResource("1_gevl4")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="RestTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_ry1cb")
}

[node name="PlayerCenterPosition" type="Marker2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="PlayerCenterPosition"]
position = Vector2(25, 0)
rotation = 0.785398
scale = Vector2(2, 2)
texture = ExtResource("2_ett7r")
hframes = 49
vframes = 22
frame = 564
